functional game with no functional keyboard

--- a/app/scss/util/animations.scss
+++ b/app/scss/util/animations.scss
@@ -22,3 +22,19 @@
     animation: flip-out 250ms;
     animation-fill-mode: forwards;
 }
+@keyframes jump {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+  .jump {
+    animation: jump 250ms;
+    animation-fill-mode: forwards;
+  }
