--- a/app/scss/components/guess.scss
+++ b/app/scss/components/guess.scss
@@ -5,8 +5,13 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 3px;
-    width: 300px;s
+    width: 300px;
+    margin-bottom: 10px;
+    
 
+    .has-letter{
+        border-color: hsl(180, 4%, 78%);
+    }
     .correct{
         background-color: hsl(126, 55%, 38%);
         border-color: hsl(126, 55%, 38%); ;
@@ -16,12 +21,10 @@
         border-color:hsl(48, 63%, 53%);
     }
     .absent{
-        background-color: hsl(180, 2%, 46%);
-        border-color: hsl(180, 2%, 56%) ;
+        background-color: hsl(180, 1%, 26%);
+        border-color: hsl(180, 1%, 26%) ;
     }
-    .has-letter{
-        border-color: hsl(180, 4%, 78%);
-    }
+    
     
 }
 
@@ -30,9 +33,10 @@
     border: 2px solid hsl(0, 3%, 56%);
     width: 52px;
     height: 52px;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
-    font-weight: 600;
+    font-weight: 900;
     font-size: 30px;
+    text-transform: uppercase;
 }
