--- a/app/scss/components/guess.scss
+++ b/app/scss/components/guess.scss
@@ -4,9 +4,11 @@
 
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 3px;
+    row-gap: 5px;
+    column-gap: 5px;
     width: 300px;
     margin-bottom: 10px;
+    box-sizing: border-box;
     
 
     .has-letter{
@@ -31,8 +33,8 @@
 
 .guess_tile{
     border: 2px solid hsl(0, 3%, 56%);
-    width: 52px;
-    height: 52px;
+    min-width: 60px;
+    min-height: 60px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
