--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -11,8 +11,15 @@ html {
 }
 
 body {
-	margin: 0;
-	padding: 16px 32px;
+	margin-top:0px;
+	margin-bottom: 0px;
+	margin-right: 0px;
+	margin-left: 0px;
+	/*padding: 16px 32px;*/
+	padding-top: 0px;
+	padding-left: 0px;
+	padding-bottom: 0px;
+	padding-right: 0px;
 	background-color:hsl(240, 3%, 7%);
 	color: hsl(0, 0%, 100%);
 	display: flex;
@@ -20,5 +27,11 @@ body {
 	align-items: center;
 	text-transform: uppercase;
 	font-weight: 600;
+	height: 100%;
+	overflow-y: hidden;
+
 	
+}
+header{
+	border-bottom: 1px solid hsl(0, 3%, 38%);
 }
