--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -5,11 +5,15 @@ h2,
 h3 {
 	margin-top: 0;
 	line-height: 1.1;
+	font-family:'Source Sans Pro', sans-serif;
 }
 
 h1{
-	font-size: 36px;
+	font-size: 40px;
 	letter-spacing: 2px;
+	text-align: center;
+	font-weight: bold;
+	margin: 6.5px 0 6.5px 0;
 }
 
 a,
