--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -35,3 +35,14 @@ body {
 header{
 	border-bottom: 1px solid hsl(0, 3%, 38%);
 }
+
+.modal{
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+
+
+
